# Storytime

./: .gitignore  DEPLOY.md  README.md  app-basic.py  app.py  gunicorn.conf.py  llm_providers.py  pyproject.toml  requirements.txt
static/: nano.colors.css  nano.css  style.css
templates/: base.html  index.html  result.html  wait.html
