[project]
name = "bedtime-story-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.61.0",
    "flask>=3.1.1",
    "mistralai>=1.9.3",
    "openai>=1.99.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
