[project]
name = "storytime"
version = "0.1.0"
description = "A little Flask-based LLM-backed story generator for my kids, hosted on an Raspberry Pi so anyone in the house can access it from their mobile devices."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.61.0",
    "flask>=3.1.1",
    "mistralai>=1.9.3",
    "openai>=1.99.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
